--- a/index.css
+++ b/index.css
@@ -68,20 +68,22 @@ nav ul li a {
     padding-top: 200px;
     margin-left: 55rem;
     z-index: 2;
-    top: 10%;
-    float: right;
+    top: 20%;
 }
 
 
 #first-header {
+    position: absolute;
     font-weight: bold;
     font-size: 35px;
-    color: #af40ff;
+    cursor: pointer;
+    top: 40%;
 }
 
 #second-header,
 #typewriter {
     font-size: 25px;
+    top: 20%;
 }
 
 .cursor {
@@ -99,6 +101,17 @@ h3 {
     text-align: center;
 }
 
+.background-box {
+    position: relative;
+    z-index: 1;
+    background-color: #5b42f3;
+    width: 600px;
+    height: 550px;
+    top: 16%;
+    left: 10%;
+    opacity: 70%;
+}
+
 .card-body {
     position: absolute;
     height: 70vh;
@@ -111,6 +124,7 @@ h3 {
     top: 150%;
     left: 45%;
     transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .card {
@@ -142,7 +156,6 @@ h3 {
 }
 
 .card-face {
-    /* Existing styles */
     width: 300px;
     height: 450px;
     position: absolute;
@@ -189,16 +202,216 @@ h3 {
     color: #686767;
 }
 
-.ig:hover {
-    color: #e1306c;
+.bio {
+    width: 300px;
+    margin-top: -25%;
+    margin-left: 65%;
+    text-align: justify;
+    font-weight: bold;
 }
 
-.git:hover {
-    color: #000000;
+.resume {
+    --color: #fff;
+    --background: #404660;
+    --background-hover: #3A4059;
+    --background-left: #2B3044;
+    --folder: #F3E9CB;
+    --folder-inner: #BEB393;
+    --paper: #FFFFFF;
+    --paper-lines: #BBC1E1;
+    --paper-behind: #E1E6F9;
+    --pencil-cap: #fff;
+    --pencil-top: #275EFE;
+    --pencil-middle: #fff;
+    --pencil-bottom: #5C86FF;
+    --shadow: rgba(13, 15, 25, .2);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 19px;
+    appearance: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 17px 29px 17px 69px;
+    transition: background 0.3s;
+    color: var(--color);
+    background: var(--bg, var(--background));
+    top: 10%;
+    left: 25%;
+
 }
 
-.fb:hover {
-    color: #3b5998;
+.resume>div {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 53px;
+    position: absolute;
+    overflow: hidden;
+    border-radius: 5px 0 0 5px;
+    background: var(--background-left);
+}
+
+.resume>div .folder {
+    width: 23px;
+    height: 27px;
+    position: absolute;
+    left: 15px;
+    top: 13px;
+}
+
+.resume>div .folder .top {
+    left: 0;
+    top: 0;
+    z-index: 2;
+    position: absolute;
+    transform: translateX(var(--fx, 0));
+    transition: transform 0.4s ease var(--fd, 0.3s);
+}
+
+.resume>div .folder .top svg {
+    width: 24px;
+    height: 27px;
+    display: block;
+    fill: var(--folder);
+    transform-origin: 0 50%;
+    transition: transform 0.3s ease var(--fds, 0.45s);
+    transform: perspective(120px) rotateY(var(--fr, 0deg));
+}
+
+.resume>div .folder:before,
+.resume>div .folder:after,
+.resume>div .folder .paper {
+    content: "";
+    position: absolute;
+    left: var(--l, 0);
+    top: var(--t, 0);
+    width: var(--w, 100%);
+    height: var(--h, 100%);
+    border-radius: 1px;
+    background: var(--b, var(--folder-inner));
+}
+
+.resume>div .folder:before {
+    box-shadow: 0 1.5px 3px var(--shadow), 0 2.5px 5px var(--shadow), 0 3.5px 7px var(--shadow);
+    transform: translateX(var(--fx, 0));
+    transition: transform 0.4s ease var(--fd, 0.3s);
+}
+
+.resume>div .folder:after,
+.resume>div .folder .paper {
+    --l: 1px;
+    --t: 1px;
+    --w: 21px;
+    --h: 25px;
+    --b: var(--paper-behind);
+}
+
+.resume>div .folder:after {
+    transform: translate(var(--pbx, 0), var(--pby, 0));
+    transition: transform 0.4s ease var(--pbd, 0s);
+}
+
+.resume>div .folder .paper {
+    z-index: 1;
+    --b: var(--paper);
+}
+
+.resume>div .folder .paper:before,
+.resume>div .folder .paper:after {
+    content: "";
+    width: var(--wp, 14px);
+    height: 2px;
+    border-radius: 1px;
+    transform: scaleY(0.5);
+    left: 3px;
+    top: var(--tp, 3px);
+    position: absolute;
+    background: var(--paper-lines);
+    box-shadow: 0 12px 0 0 var(--paper-lines), 0 24px 0 0 var(--paper-lines);
+}
+
+.resume>div .folder .paper:after {
+    --tp: 6px;
+    --wp: 10px;
+}
+
+.resume>div .pencil {
+    height: 2px;
+    width: 3px;
+    border-radius: 1px 1px 0 0;
+    top: 8px;
+    left: 105%;
+    position: absolute;
+    z-index: 3;
+    transform-origin: 50% 19px;
+    background: var(--pencil-cap);
+    transform: translateX(var(--pex, 0)) rotate(35deg);
+    transition: transform 0.4s ease var(--pbd, 0s);
+}
+
+.resume>div .pencil:before,
+.resume>div .pencil:after {
+    content: "";
+    position: absolute;
+    display: block;
+    background: var(--b, linear-gradient(var(--pencil-top) 55%, var(--pencil-middle) 55.1%, var(--pencil-middle) 60%, var(--pencil-bottom) 60.1%));
+    width: var(--w, 5px);
+    height: var(--h, 20px);
+    border-radius: var(--br, 2px 2px 0 0);
+    top: var(--t, 2px);
+    left: var(--l, -1px);
+}
+
+.resume>div .pencil:before {
+    -webkit-clip-path: polygon(0 5%, 5px 5%, 5px 17px, 50% 20px, 0 17px);
+    clip-path: polygon(0 5%, 5px 5%, 5px 17px, 50% 20px, 0 17px);
+}
+
+.resume>div .pencil:after {
+    --b: none;
+    --w: 3px;
+    --h: 6px;
+    --br: 0 2px 1px 0;
+    --t: 3px;
+    --l: 3px;
+    border-top: 1px solid var(--pencil-top);
+    border-right: 1px solid var(--pencil-top);
+}
+
+.resume:before,
+.resume:after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    border-radius: 1px;
+    background: var(--color);
+    transform-origin: 9px 1px;
+    transform: translateX(var(--cx, 0)) scale(0.5) rotate(var(--r, -45deg));
+    top: 26px;
+    right: 16px;
+    transition: transform 0.3s;
+}
+
+.resume:after {
+    --r: 45deg;
+}
+
+.resume:hover {
+    --cx: 2px;
+    --bg: var(--background-hover);
+    --fx: -40px;
+    --fr: -60deg;
+    --fd: .15s;
+    --fds: 0s;
+    --pbx: 3px;
+    --pby: -3px;
+    --pbd: .15s;
+    --pex: -24px;
 }
 
 .projects-container {
@@ -214,11 +427,16 @@ h3 {
     margin: auto;
     margin-bottom: 20px;
     margin-top: 20px;
+    transition: transform 0.3s;
+}
+
+.project:hover {
+    transform: scale(1.1);
 }
 
 .project-one {
     color: darkorchid;
-    background-image: url(background.avif);
+    background-image: url(assets/background.avif);
     background-size: cover;
 }
 
@@ -306,7 +524,7 @@ h3 {
     gap: 25px;
     padding: 20px 40px;
     background-color: #333333;
-    margin-left: 65rem;
+    margin-left: 34rem;
 }
 
 .social {
